--- a/styles.css
+++ b/styles.css
@@ -214,7 +214,7 @@ body {
     border-radius: 12px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
     max-width: 1100px;
-    width: 100%;
+    width: 80%;
     text-align: center;
     height: 100%;
     margin: auto;
@@ -222,6 +222,22 @@ body {
 
 #quiz-container:hover {
     box-shadow: 0 30px 60px rgba(0, 0, 0, 0.4);
+}
+
+/* 視頻容器設計 */
+#video-container {
+    margin-bottom: 20px;
+    width: 100%;
+}
+
+video {
+    border-radius: 8px;
+    width: 80%;
+    height: 80%;
+    pointer-events: none;
+    user-select: none;
+    outline: none;
+    transition: $1 0.6s ease;
 }
 
 /* 一般按鈕設計 */
