--- a/styles.css
+++ b/styles.css
@@ -174,7 +174,7 @@ body {
 }
 
 #basic-info-form input, #basic-info-form select {
-    width: calc(100% - 30px);
+    width: 100%;
     padding: 20px;
     margin-bottom: 30px;
     border: 1px solid #ddd;
