--- a/styles.css
+++ b/styles.css
@@ -191,14 +191,20 @@ body {
 }
 
 #submit-info-button {
-    background: linear-gradient(to right, #43CBFF, #9708CC);
-    color: #fff;
+    padding: 14px 28px;
+    font-size: 18px;
+    background-color: #1E88E5;
+    color: white;
     border: none;
-    border-radius: 30px;
-    padding: 20px 40px;
+    border-radius: 4px;
     cursor: pointer;
-    font-size: 20px;
-    transition: all 0.4s ease;
+    transition: $1 0.6s ease;
+    width: 100%;
+    max-width: 400px;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+    margin-top: 10px;
+    margin: 0 auto;
+    display: block;
 }
 
 #submit-info-button:hover {
