--- a/styles.css
+++ b/styles.css
@@ -235,17 +235,15 @@ body {
 
 /* 主要標題樣式設計 */
 #main-menu h1 {
-    color: #ffffff;
-    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+    color: #333;
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
 }
-
-
 
 /* 規則列表樣式設計 */
 ol {
     list-style-type: decimal;
     padding-left: 20px;
-    color: #ffffff;
+    color: #5f6c7b;
     font-size: 18px;
     line-height: 1.8;
 }
@@ -255,8 +253,18 @@ ol li {
 }
 
 ol li strong {
-    color: #ff0000;
+    color: #9708CC;
 }
+
+/* 測驗規則標題 h2 樣式設計 */
+.rules h2 {
+    color: #5f6c7b;
+    font-size: 28px;
+    text-align: left;
+    margin-bottom: 20px;
+    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
+}
+
 
 
 
