--- a/styles.css
+++ b/styles.css
@@ -243,7 +243,7 @@ body {
 ol {
     list-style-type: decimal;
     padding-left: 20px;
-    color: #5f6c7b;
+    color: #eae1e1;
     font-size: 18px;
     line-height: 1.8;
 }
@@ -258,7 +258,7 @@ ol li strong {
 
 /* 測驗規則標題 h2 樣式設計 */
 .rules h2 {
-    color: #5f6c7b;
+    color: #d7b08c;
     font-size: 28px;
     text-align: left;
     margin-bottom: 20px;
