--- a/styles.css
+++ b/styles.css
@@ -224,7 +224,7 @@ body {
     font-size: 18px;
     transition: all 0.4s ease;
     display: block;
-    margin: 0 auto;
+    margin: 40px auto 0 auto;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
 }
 
