--- a/styles.css
+++ b/styles.css
@@ -182,7 +182,7 @@ body {
     box-sizing: border-box;
     font-size: 16px;
     background-color: #fafafa;
-    transition: $1 0.6s ease;
+    transition: 1 0.6s ease;
 }
 
 #basic-info-form input:focus, #basic-info-form select:focus {
@@ -198,7 +198,7 @@ body {
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    transition: $1 0.6s ease;
+    transition: 1 0.6s ease;
     width: 100%;
     max-width: 400px;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
@@ -250,6 +250,7 @@ ol {
 
 ol li {
     margin-bottom: 10px;
+    color: black;
 }
 
 ol li strong {
@@ -258,7 +259,7 @@ ol li strong {
 
 /* 測驗規則標題 h2 樣式設計 */
 .rules h2 {
-    color: #d7b08c;
+    color: #8d3f00;
     font-size: 28px;
     text-align: left;
     margin-bottom: 20px;
@@ -298,7 +299,7 @@ video {
     pointer-events: none;
     user-select: none;
     outline: none;
-    transition: $1 0.6s ease;
+    transition: 1 0.6s ease;
 }
 
 /* 一般按鈕設計 */
@@ -310,7 +311,7 @@ button {
     border: none;
     border-radius: 8px;
     cursor: pointer;
-    transition: $1 0.6s ease;
+    transition: 1 0.6s ease;
     margin: 10px;
 }
 
@@ -531,4 +532,36 @@ nav .logo {
     font-size: 28px;
     font-weight: bold;
     color: #43CBFF;
+}
+
+#demo-result-container {
+    background-color: white;
+    padding: 40px;
+    border-radius: 12px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+    max-width: 1100px;
+    width: 80%;
+    text-align: center;
+    height: 100%;
+    margin: auto;
+}
+
+#demo-result-container:hover {
+    box-shadow: 0 30px 60px rgba(0, 0, 0, 0.4);
+}
+
+#main-menu {
+    background-color: white;
+    padding: 40px;
+    border-radius: 12px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+    max-width: 1100px;
+    width: 80%;
+    text-align: center;
+    height: 100%;
+    margin: auto;
+}
+
+#main-menu:hover {
+    box-shadow: 0 30px 60px rgba(0, 0, 0, 0.4);
 }
